--- a/css/styles.css
+++ b/css/styles.css
@@ -33,9 +33,6 @@ img {
   height: auto;
 }
 
-button {
-  cursor: pointer;
-}
 /*------HEADER------*/
 /*---320---*/
 .nav-list,
@@ -45,27 +42,19 @@ button {
 .header {
   padding: 36px 16px 29px 14px;
 }
-
 .header-container {
   max-width: 320px;
-  margin: 0 auto;
 }
-
 .header-nav {
   display: flex;
   justify-content: space-between;
 }
-
 .logo {
   font-size: 36px;
   color: #000;
 }
 .header-logo-part {
   color: #939393;
-}
-.nav-link {
-  font-size: 20px;
-  color: #263238;
 }
 .burger-button {
   border: none;
@@ -74,13 +63,108 @@ button {
 .burger {
   fill: #39515e;
 }
-/* .header-button {
-  width: 312px;
-  height: 70px;
-  display: flex;
-  text-align: center;
-  font-family: inherit;
+/*---575---*/
+@media screen and (min-width: 575px) {
+  .header {
+    padding: 39px 50px 11px 32px;
+  }
+  .header-container {
+    max-width: 575px;
+  }
+  .logo {
+    font-size: 30px;
+  }
+  .burger {
+    width: 43px;
+    height: 24px;
+  }
+}
+/*---768---*/
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 39px 39px 40px 39px;
+  }
+  .header-container {
+    max-width: 768px;
+  }
+
+  .burger {
+    width: 30px;
+    height: 17px;
+  }
+}
+/*---992---*/
+@media screen and (min-width: 992px) {
+  .burger {
+    display: none;
+  }
+  .header {
+    padding: 25px 31px 31px 31px;
+  }
+  .header-container {
+    max-width: 992px;
+  }
+  .nav-list {
+    display: flex;
+    gap: 12px;
+  }
+  .nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    color: #263238;
+  }
+  .header-button {
+    display: block;
+    text-align: center;
+    align-items: center;
+    font-family: inherit;
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: #000;
+    border: 2px solid #263238;
+    border-radius: 5px;
+    width: 160px;
+    height: 50px;
+  }
+}
+/*---1158---*/
+@media screen and (min-width: 1158px) {
+  .burger {
+    display: none;
+  }
+  .header {
+    padding: 25px 31px 31px 31px;
+  }
+  .header-container {
+    max-width: 1600px;
+    align-items: baseline;
+  }
+  .nav-list {
+    display: flex;
+    gap: 12px;
+  }
+  .nav.link {
+    font-weight: 500;
+    font-size: 16px;
+    color: #263238;
+  }
+  .header-button {
+    display: block;
+    text-align: center;
+    align-items: center;
+    font-family: inherit;
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: #000;
+    border: 2px solid #263238;
+    border-radius: 5px;
+    width: 160px;
+    height: 50px;
+  }
+}
+
+/* .nav-link {
   font-size: 20px;
-  letter-spacing: 0.03em;
-  color: #000;
-} */
+  color: #263238;
+}
+/* */
